# toa

./: .dockerignore  .env.example  .envrc  .gitignore  .justfile  Dockerfile.base  Dockerfile.interaction-api  Dockerfile.runtime-base  LICENSE  README.md  cabal.project  cabal.project.freeze  cardano-toa.cabal
.github/workflows/: ci.yml
bench/: baseline.json
config/: config_atlas.example.json
scripts/: build-images.sh
src/exe/interaction-api/: Main.hs
src/exe/toa-bench/: Main.hs
src/exe/toa-bench/Bench/: Contexts.hs  Eval.hs  Report.hs
src/exe/toa-gen-swagger/: Main.hs
src/exe/toa-gen-vectors/: Main.hs
src/exe/toa-verify-reconstruction/: Main.hs
src/lib/offchain-lib/: Utils.hs
src/lib/offchain-lib/DomainTypes/Core/: Actions.hs  Types.hs
src/lib/offchain-lib/TxBuilding/: Context.hs  Exceptions.hs  Interactions.hs  Transactions.hs
src/lib/offchain-lib/TxBuilding/Toa/: Address.hs  Conversions.hs  DerivationR.hs  Fingerprint.hs  Query.hs  Skeletons.hs  Validator.hs
src/lib/onchain-lib/Onchain/: Utils.hs
src/lib/onchain-lib/Onchain/Derivation/: R.hs
src/lib/onchain-lib/Onchain/Protocol/: Types.hs
src/lib/onchain-lib/Onchain/Validators/: ToaV1Validator.hs
src/lib/webapi-lib/Api/: AppMonad.hs  Server.hs  Types.hs
src/lib/webapi-lib/Api/Handlers/: Toa.hs  Tx.hs
src/lib/webapi-lib/WebAPI/: AtlasOrphans.hs  Auth.hs  CORS.hs  ServiceProbe.hs  Utils.hs
src/test/: Main.hs  UnitTests.hs
src/test-onchain/Onchain/Test/: AlwaysTrueMP.hs
src/test/Test/: Policies.hs  Setup.hs  Skeleton.hs
src/test/UnitTests/: Conversions.hs  DeriveTrace.hs  Validator.hs
src/test/UnitTests/Derivation/: RTest.hs
src/test/UnitTests/Validator/: Scenarios.hs
test-vectors/: README.md  toa-v1.json
validators/: R-CONSTANTS.md  R-verify-output.txt  ToaV1.uplc
