cabal-version: 3.0
name:          cardano-toa
version:       0.1.0
synopsis:      Token-Owned Addresses (TOA) — reference implementation and tooling for the Cardano CIP.
homepage:      www.cardano.vip
license:       MIT
author:        Marius Georgescu
maintainer:    georgescumarius@live.com
category:      Web3
build-type:    Simple

extra-source-files:
  validators/FLAT_PREFIX_TOA_V1.bin
  validators/FLAT_SUFFIX_TOA_V1.bin


common common-options
  ghc-options:      -Wall
  default-language: GHC2021
  build-depends:    base

common plinth-ghc-options
  ghc-options:
    -Wall -Wcompat -Widentities -Wincomplete-record-updates
    -Wincomplete-uni-patterns -Wpartial-fields -Wredundant-constraints

  default-language:   GHC2021
  default-extensions: TemplateHaskell

  -- all Plinth modules should use the following GHC flags
  ghc-options:
    -fno-ignore-interface-pragmas -fno-omit-interface-pragmas
    -fno-full-laziness -fno-spec-constr -fno-specialise -fno-strictness
    -fno-unbox-strict-fields -fno-unbox-small-strict-fields
    -fconstraint-solver-iterations=0

  ghc-options:        -fobject-code -fplugin-opt PlutusTx.Plugin:defer-errors

  -- set target plutus-core version
  ghc-options:        -fplugin-opt PlutusTx.Plugin:target-version=1.1.0

  -- Compiler flags (defaults): no-remove-trace keeps traces; preserve-logging
  -- prevents optimization from removing trace messages (see Plutus troubleshooting).
  -- ghc-options:        -fplugin-opt PlutusTx.Plugin:preserve-logging
  ghc-options:        -fplugin-opt PlutusTx.Plugin:remove-trace
  ghc-options:        -fplugin-opt PlutusTx.Plugin:optimize

library onchain-lib
  import:             common-options, plinth-ghc-options
  default-language:   Haskell2010
  hs-source-dirs:     src/lib/onchain-lib
  exposed-modules:
    Onchain.Derivation.R
    Onchain.Protocol.Types
    Onchain.Utils
    Onchain.Validators.ToaV1Validator

  if !(impl(ghcjs) || os(ghcjs))
    build-depends: plutus-tx-plugin

  build-depends:
    , bytestring
    , containers
    , file-embed
    , mtl

  --- Cardano specific dependencies
  build-depends:
    , plutus-core
    , plutus-ledger-api
    , plutus-tx

  default-extensions:
    BangPatterns
    BlockArguments
    DataKinds
    DeriveAnyClass
    DeriveGeneric
    DerivingStrategies
    DerivingVia
    FlexibleContexts
    FlexibleInstances
    GeneralizedNewtypeDeriving
    ImportQualifiedPost
    InstanceSigs
    LambdaCase
    MultiParamTypeClasses
    NamedFieldPuns
    NumericUnderscores
    OverloadedStrings
    PatternSynonyms
    RecordWildCards
    ScopedTypeVariables
    StandaloneDeriving
    TemplateHaskell
    TupleSections
    TypeApplications
    TypeFamilies
    TypeOperators
    UndecidableInstances
    ViewPatterns

library onchain-test-lib
  import:             common-options, plinth-ghc-options
  default-language:   Haskell2010
  hs-source-dirs:     src/test-onchain
  exposed-modules:    Onchain.Test.AlwaysTrueMP

  if !(impl(ghcjs) || os(ghcjs))
    build-depends: plutus-tx-plugin

  build-depends:
    , bytestring
    , containers
    , plutus-core
    , plutus-ledger-api
    , plutus-tx

  default-extensions:
    BangPatterns
    BlockArguments
    DataKinds
    DeriveAnyClass
    DeriveGeneric
    DerivingStrategies
    DerivingVia
    FlexibleContexts
    FlexibleInstances
    GeneralizedNewtypeDeriving
    ImportQualifiedPost
    InstanceSigs
    LambdaCase
    MultiParamTypeClasses
    NamedFieldPuns
    NumericUnderscores
    OverloadedStrings
    PatternSynonyms
    RecordWildCards
    ScopedTypeVariables
    StandaloneDeriving
    TemplateHaskell
    TupleSections
    TypeApplications
    TypeFamilies
    TypeOperators
    UndecidableInstances
    ViewPatterns

library offchain-lib
  import:             common-options
  default-language:   Haskell2010
  hs-source-dirs:     src/lib/offchain-lib
  default-extensions:
    BlockArguments
    DataKinds
    DeriveAnyClass
    DeriveGeneric
    DerivingStrategies
    DerivingVia
    FlexibleContexts
    GeneralizedNewtypeDeriving
    ImportQualifiedPost
    InstanceSigs
    NamedFieldPuns
    OverloadedStrings
    RecordWildCards
    TupleSections
    TypeApplications

  exposed-modules:
    DomainTypes.Core.Actions
    DomainTypes.Core.Types
    TxBuilding.Context
    TxBuilding.Exceptions
    TxBuilding.Interactions
    TxBuilding.Toa.Address
    TxBuilding.Toa.Conversions
    TxBuilding.Toa.DerivationR
    TxBuilding.Toa.Fingerprint
    TxBuilding.Toa.Query
    TxBuilding.Toa.Skeletons
    TxBuilding.Toa.Validator
    TxBuilding.Transactions
    Utils

  build-depends:
    , aeson
    , base16-bytestring
    , bech32
    , bytestring
    , cborg
    , containers
    , crypton
    , deriving-aeson
    , file-embed
    , memory
    , onchain-lib
    , serialise
    , text

  --- Cardano specific dependencies
  build-depends:
    , atlas-cardano
    , cardano-api
    , cardano-crypto-class
    , plutus-ledger-api
    , plutus-tx
    , swagger2

executable toa-gen-vectors
  import:           common-options
  default-language: GHC2021
  hs-source-dirs:   src/exe/toa-gen-vectors
  main-is:          Main.hs
  build-depends:
    , aeson
    , aeson-pretty
    , atlas-cardano
    , base
    , base16-bytestring
    , bytestring
    , cardano-api
    , deriving-aeson
    , directory
    , offchain-lib
    , onchain-lib
    , plutus-ledger-api
    , plutus-tx
    , text

executable toa-bench
  import:           common-options
  default-language: GHC2021
  hs-source-dirs:   src/exe/toa-bench
  main-is:          Main.hs
  other-modules:
    Bench.Contexts
    Bench.Eval
    Bench.Report
  build-depends:
    , aeson
    , aeson-pretty
    , base
    , bytestring
    , containers
    , directory
    , filepath
    , mtl
    , onchain-lib
    , plutus-core
    , plutus-ledger-api
    , plutus-ledger-api:plutus-ledger-api-testlib
    , plutus-tx
    , text

executable toa-verify-reconstruction
  import:           common-options
  default-language: GHC2021
  hs-source-dirs:   src/exe/toa-verify-reconstruction
  main-is:          Main.hs
  build-depends:
    , base
    , base16-bytestring
    , bytestring
    , crypton
    , memory
    , mtl
    , plutus-core
    , plutus-ledger-api
    , serialise

library webapi-lib
  import:             common-options
  default-language:   Haskell2010
  hs-source-dirs:     src/lib/webapi-lib
  default-extensions:
    BlockArguments
    DataKinds
    DeriveAnyClass
    DeriveGeneric
    DerivingStrategies
    DerivingVia
    FlexibleContexts
    FlexibleInstances
    GeneralizedNewtypeDeriving
    ImportQualifiedPost
    LambdaCase
    NamedFieldPuns
    OverloadedStrings
    RecordWildCards
    ScopedTypeVariables
    TypeApplications
    TypeOperators

  exposed-modules:
    Api.AppMonad
    Api.Handlers.Toa
    Api.Handlers.Tx
    Api.Server
    Api.Types
    WebAPI.AtlasOrphans
    WebAPI.Auth
    WebAPI.CORS
    WebAPI.ServiceProbe
    WebAPI.Utils

  build-depends:
    , aeson
    , base16-bytestring
    , bytestring
    , deriving-aeson
    , http-types
    , lens
    , mtl
    , offchain-lib
    , onchain-lib
    , servant
    , servant-server
    , servant-swagger
    , servant-swagger-ui
    , swagger2
    , text
    , time
    , transformers
    , wai
    , wai-cors
    , warp

  --- Cardano specific dependencies
  build-depends:
    , atlas-cardano
    , cardano-api

executable interaction-api
  import:           common-options
  default-language: GHC2021
  hs-source-dirs:   src/exe/interaction-api
  main-is:          Main.hs
  build-depends:
    , aeson-pretty
    , atlas-cardano
    , base
    , bytestring
    , directory
    , offchain-lib
    , text
    , warp
    , webapi-lib

executable toa-gen-swagger
  import:           common-options
  default-language: GHC2021
  hs-source-dirs:   src/exe/toa-gen-swagger
  main-is:          Main.hs
  build-depends:
    , aeson-pretty
    , base
    , bytestring
    , directory
    , webapi-lib

test-suite toa-tests
  import:           common-options
  default-language: GHC2021
  type:             exitcode-stdio-1.0
  hs-source-dirs:   src/test
  main-is:          Main.hs
  other-modules:
    Test.Policies
    Test.Setup
    Test.Skeleton
    UnitTests
    UnitTests.Conversions
    UnitTests.Derivation.RTest
    UnitTests.DeriveTrace
    UnitTests.Validator
    UnitTests.Validator.Scenarios
  build-depends:
    , aeson
    , atlas-cardano
    , base
    , base16-bytestring
    , bytestring
    , cardano-api
    , deriving-aeson
    , offchain-lib
    , onchain-lib
    , onchain-test-lib
    , plutus-ledger-api
    , plutus-tx
    , servant-server
    , tasty
    , tasty-hunit
    , text
    , webapi-lib
